# vim: set noexpandtab:
2013-01-16 Matt
	* moving qoverp to muon class. Mistakenly added to Lepton class.
	
2013-01-15 Matt
	* Added two variables to muon class to handle qoverp.
	
2013-01-15 Serhan Mete <amete@cern.ch>
	* scripts/install.sh: Minor update to SUSYTools and DGTriggerReweight tags 

2013-01-14 Steve
	* Added D3PDTag enum value: D3PD_p1328
		* Missed the tag below, but this doesn't actually affect anything in the code
		  so I think I'll leave it for the next tag

2013-01-14 Steve
	* Added methods, options, and additional arguments necessary to correct lepton isolation 
	  for other nearby baseline leptons: removeLepsFromIso
		* Has been studied in the 4lep analysis
	  	* Turned off by default, still being studied for other analyses
		* Implementation of the correction is done in SusyNtTools methods. Does not overwrite iso, 
		  just returns the new iso: elPtConeCorr, elEtTopoConeCorr, muPtConeCorr, muEtConeCorr
		* Signal selection methods now require baseline lepton vectors as arguments
	* Minor cleanup
	* Tagging SusyNtuple-00-00-40

2012-12-23 Steve
	* Added charge and flavor methods isOppSign, isOFOS, hasOFOS, hasOS, hasSS

2012-12-21 Steve
	* Updated TrilTrigLogic
		* Added tau arguments to passTriggerMatching, tau triggers not fully implemented yet
		* Turned on single isolated trigger
		* Added matchLepTrigger helper method
	* Added hasSFSS method to SusyNtTools

2012-12-15 Steve
	* Added JetTauEtmiss stream to DataStream enum
	* Tagging SusyNtuple-00-00-39

2012-12-14 Steve
	* Removed Event.lumiSF
	* Renamed Lepton.truthMatchType to truthType
	* Added missing variables to copy constructors and assignment operators
	* Removed Lepton inheritance from Tau class. Now inherits from Particle.
	* Added matched2TruthLepton to Tau class
	* Added isOppSign(tau, tau) method to SusyNtTools
	* Changed SusyNtTools Mll function to take Particle pointers, for taus
	* Added alternative Meff method which also includes taus