@@ -1,6 +1,13 @@
 # vim: set noexpandtab:
+
 2013-01-16 Matt
-	* moving qoverp to muon class. Mistakenly added to Lepton class.
+	* Moving qoverp to muon class. Mistakenly added to Lepton class.
+	* Update muon vars to be from id and ms. Also added theta and phi (needed).
+	* Add bch_corr_jet to jet class
+	* Add passSmartVeto to SusyNtTools
+	* Add passDeadRegions to SusyNtTools implementing FEB turn off in HEC
+	         * taken from: https://indico.cern.ch/getFile.py/access?contribId=9&resId=0&materialId=slides&confId=223778
+	         * This is current recommendation but slides imply study independently 
 	
 2013-01-15 Matt
 	* Added two variables to muon class to handle qoverp.
